--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -3,17 +3,19 @@
   align-items: center;
   justify-content: space-between;
   height: 100px;
+
 }
 
-.social {
+/* .social {
   display: flex;
   gap: 10px;
   flex: 1;
-}
+} */
 
 .logo {
   flex: 1;
-  text-align: center;
+  /* text-align: center; */
+  left: 0;
   font-size: 36px;
   font-weight: bold;
 }
@@ -24,6 +26,7 @@
   gap: 20px;
   flex: 1;
   font-size: 20px;
+  right: 0;
 }
 
 @media screen and (max-width: 1280px) {
