--- a/src/components/themeToggle/themeToggle.module.css
+++ b/src/components/themeToggle/themeToggle.module.css
@@ -1,3 +1,5 @@
+
+
 .container {
   width: 40px;
   height: 20px;
@@ -9,9 +11,49 @@
   position: relative;
 }
 
-.ball{
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
+.themeToggleContainer {
+  position: relative;
+}
+
+.themeToggle {
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 4px;
+  margin-left: 100px;
+
+}
+
+.themeDropdown {
   position: absolute;
+  top: 100%;
+  left: 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 999999999;
+}
+
+.themeDropdown ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #fefefe;
+  color: black;
+  width: 120px;
+}
+
+.themeDropdown li {
+  padding: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.themeDropdown li:hover {
+  background-color: #f0f0f0;
+}
+
+.themeDropdown li.selected {
+  background-color: var(--bg);
+  color: var(--textColor);
 }
