--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,12 @@
 :root {
-  --bg: white;
+  --bg: #FBFBF2;
   --textColor: black;
-  --softBg: #f0f0f0;
-  --softTextColor: #626262;
+  --softBg: #E5E6E4;
+  --softTextColor: #A6A2A2;
+  --navBarBg: #3f8bfd;
+  --btnsBg: #096afc;
+  --btnDisable:  #096afc60;
+  /*https://coolors.co/palette/fbfbf2-e5e6e4-cfd2cd-a6a2a2-847577*/
 }
 
 * {
@@ -21,6 +25,15 @@ a {
   text-decoration: none;
 }
 
+.light {
+  --bg: #FBFBF2;
+  --textColor: black;
+  --softBg: #E5E6E4;
+  --softTextColor: #A6A2A2;
+  --navBarBg: #3f8bfd;
+  --btnsBg: #096afc;
+  --btnDisable:  #096afc60;
+}
 .dark {
   --bg: #0d111a;
   --textColor: #ddd;
@@ -28,12 +41,7 @@ a {
   --softTextColor: #a6a6a6;
 }
 
-.light {
-  --bg: white;
-  --textColor: black;
-  --softBg: #f0f0f0;
-  --softTextColor: #626262;
-}
+
 
 .blue {
   --bg: #1E90FF;
@@ -42,7 +50,7 @@ a {
   --softTextColor: #FFFFFF;
 }
 
-.green {
+.adventurous {
   --bg: #228B22;
   --textColor: #000000;
   --softBg: #98FB98;
@@ -65,16 +73,18 @@ a {
 
 .container {
   min-height: 100vh;
+  min-width: 100vw;
   background-color: var(--bg);
   color: var(--textColor);
 }
 
 .wrapper {
-  max-width: 1536px;
+  max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 80px;
-  padding-right: 80px;
+  /* padding-left: 80px;
+  padding-right: 80px; */
+
 }
 
 @media screen and (max-width: 1536px) {
@@ -90,8 +100,8 @@ a {
 @media screen and (max-width: 1024px) {
   .wrapper {
     max-width: 768px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 @media screen and (max-width: 768px) {
