--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,23 +1,40 @@
+
 .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
 
+  padding: 0 30px 0 30px;
 }
 
-/* .social {
-  display: flex;
-  gap: 10px;
-  flex: 1;
-} */
+
+.transparent {
+  background-color: transparent !important;
+}
+
+
+.scrolled {
+  background-color:  var(--navBarBg); 
+  transition: background-color 0.5s ease;
+  height: 70px;
+  bottom: 0;
+
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
 
 .logo {
   flex: 1;
-  /* text-align: center; */
-  left: 0;
+  text-align: left;
+  margin-left: 60px;
   font-size: 36px;
   font-weight: bold;
+  
 }
 
 .links {
@@ -49,6 +66,7 @@
 @media screen and (max-width: 768px) {
   .logo {
     font-size: 24px;
+    margin-left: 0;
   }
 }
 @media screen and (max-width: 640px) {
