--- a/src/components/authLinks/authLinks.module.css
+++ b/src/components/authLinks/authLinks.module.css
@@ -15,6 +15,7 @@
   width: 100%;
   height: 2px;
   background-color: var(--textColor);
+  
 }
 
 .responsiveMenu{
@@ -31,11 +32,18 @@
   gap: 50px;
   font-size: 36px;
   z-index: 999;
+  
 }
 
 @media screen and (max-width: 640px) {
   .burger {
     display: flex;
+    
+  }
+  .line {
+ 
+    color: var(--navTextColor);
+    
   }
 
   .link{
