--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
 :root {
   /* --bg: #4C5B7F; */
   background: -webkit-linear-gradient(
@@ -12,6 +18,7 @@
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   --textColor: #ffffff;
+  --accent-color: #7fd3de;
   --softBg: #7fd3de;
   --softTextColor: #025e73;
   --navBarBg: #ffffff;
@@ -29,6 +36,7 @@
 body {
   max-width: 100vw;
   overflow-x: hidden;
+
 }
 
 a {
@@ -40,6 +48,7 @@ a {
 .adventurer {
   background: linear-gradient(135deg, #405d27, #6b8f23);
   --textColor: #f4f4f2;
+  --accent-color: #a4c639;
   --softBg: #6b8f23;
   --softTextColor: #f4f4f2;
   --navBarBg: #2c3e1f;
@@ -50,9 +59,10 @@ a {
 }
 
 .romantic {
-  background-color: #e96196;
+  background-color: #81e961;
   background: linear-gradient(120deg, #e96196 0%, #ffffff 74%);
   --textColor: #6d213c;
+  --accent-color: #f8f7f7;
   --softBg: #ffb6b9;
   --softTextColor: #6d213c;
   --navBarBg: #6d213c;
@@ -74,6 +84,7 @@ a {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   --textColor: #ffffff;
+  --accent-color: #7fd3de;
   --softBg: #7fd3de;
   --softTextColor: #025e73;
   --navBarBg: #ffffff;
@@ -85,6 +96,7 @@ a {
 .relax {
   --bg: #a4b0f5;
   --textColor: #2c3e50;
+  --accent-color: #8797d6;
   --softBg: #8797d6;
   --softTextColor: #dbdfea;
   --navBarBg: #47597e;
@@ -93,42 +105,52 @@ a {
 }
 
 .family {
-  --bg: #f9d5e5;
-  --textColor: #94424f;
+  --bg: #ffffff;
+  --textColor: #0e0c0d;
+  --accent-color: #0079fb;
   --softBg: #eeac99;
-  --softTextColor: #ac3b61;
-  --navBarBg: #123c69;
+  --softTextColor: #212121;
+  --navBarBg: #0079fb;
   --btnsBg: #ac3b61;
   --btnDisable: #ac3b6199;
-  --navTextColor: #f9d5e5;
+  --navTextColor: #ffffff;
 }
 
 .party {
   --bg: #ffcb47;
   --textColor: #2e1114;
+  --accent-color: #c70039;
   --softBg: #ff9a00;
-  --softTextColor: #1d0404;
+  --softTextColor: #8f5207;
   --navBarBg: #c70039;
   --btnsBg: #900c3f;
   --btnDisable: #900c3f99;
   --navTextColor:  #ffffff;
 }
 
-.container {
-  min-height: 100vh;
-  min-width: 100vw;
-  background-color: var(--bg);
+.colortheme {
+  background: var(--bg);
   color: var(--textColor);
 }
 
-.wrapper {
+.accent {
+  color: var(--accent-color);
+}
+
+.softText {
+  color: var(--softTextColor);
+}
+
+
+
+/* .wrapper {
   max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
   padding-left: 80px;
   padding-right: 80px;
-}
-
+} */
+/* 
 @media screen and (max-width: 1536px) {
   .wrapper {
     max-width: 1366px;
@@ -155,7 +177,7 @@ a {
   .wrapper {
     max-width: 475px;
   }
-}
+} */
 
 .ql-container {
   font-size: 28px !important;
